--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.1.0",
     "@tailwindcss/vite": "^4.0.14",
+    "@tanstack/react-query": "^5.74.4",
     "@types/three": "^0.174.0",
+    "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "d3-geo": "^3.1.1",
     "framer-motion": "^12.5.0",
@@ -25,12 +27,15 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.5.0",
     "tailwindcss": "^4.0.14",
     "three": "^0.174.0",
     "three-geojson-geometry": "^2.1.1",
-    "topojson-client": "^3.1.0"
+    "topojson-client": "^3.1.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
