Se añade nuevos formularios al registro de pacientes y se puede navegar usando el sidebar

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,10 +28,9 @@
       "@lib/*": ["lib/*"],
       "@pages/*": ["pages/*"],
       "@styles/*": ["styles/*"],
-      "@types/*": ["types/*"],
+      "@interfaces/*": ["interfaces/*"],
       "@utils/*": ["utils/*"],
-      "@api/*": ["api/*"],
-      "@store/*": ["store/*"]
+      "@api/*": ["api/*"]
     }
   },
   "include": ["src"]
