--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@eslint/js": "^9.21.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/chart.js": "^2.9.41",
     "@types/d3-geo": "^3.1.0",
     "@types/jest": "^29.5.14",
