--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.0",
+    "sonner": "^2.0.3",
     "tailwindcss": "^4.0.14",
     "three": "^0.174.0",
     "three-geojson-geometry": "^2.1.1",
